Add of the animations on change

--- a/inc/html/about.html
+++ b/inc/html/about.html
@@ -1,5 +1,5 @@
 <!-- About top -->
-<div class = 'part part-lg-a part-lg--h paper-effect-border animated stretchRight' ng-show="model.content.main.selectedbool" >
+<div class = 'part part-lg-a part-lg--h paper-effect-border' llaanimate llaanimateon='model.content.main.animate' llaanimatein='stretchRight' llaanimateout='fadeOut' ng-show="model.content.main.selectedbool" >
 	<div class='part part-lg-h part-lg--f paper-inner text-center' ng-show="model.content.main.selectedbool">
 		<span class='animated fadeIn' >
 			<a ng-href='#/about/~' >
