Animations fix of the animations for the gallery

--- a/inc/html/calender.html
+++ b/inc/html/calender.html
@@ -24,7 +24,7 @@
 	<h3>{{anevent.post_title}}</h3>
 	<p>{{anevent.date_value}}</p>
 </div>
-<div class = 'part part-lg-a part-lg--a paper-effect-border animate fadIn' ng-show="model.fullbool">
+<div class = 'part part-lg-a part-lg--a paper-effect-border '  llaanimate llaanimateon='model.animate' llaanimatein='fadeIn' llaanimateout='fadeOut' ng-show="model.fullbool">
 	<div class='part part-lg-f part-lg--f paper-inner text-center content-padding' ng-show='model.fullbool' scrollable >
 		<a ng-href="#/calender/{{model.content.main.lla_part_slug}}/~">
 			<button class='close'>x</button>
