--- a/inc/html/sense.html
+++ b/inc/html/sense.html
@@ -1,5 +1,8 @@
-<div class='scrolltonull' scrolltonull >&lt;</div>
-<div id='sense' class='part part-top-padding part-lg-q part-lg--f'>
+<div class='movearrows'>
+	<div  galleryway='null'>&lt;</div>
+	<div galleryway='next'>&gt;</div>
+</div>
+<div id='sense' class='part part-top-padding part-lg-q part-lg--f' galleryway='nullwaypoint'>
 	<div class='part part-top-padding part-lg-f part-lg--h '>
 	</div>
 	<div class='part part-top-padding part-lg-f part-lg--h text-center'>
