--- a/inc/html/gallery_page.html
+++ b/inc/html/gallery_page.html
@@ -2,7 +2,7 @@
 	<div id='{{post.lla_part_slug}}' class='part part-lg-r part-lg--f text-center' ng-class="{' part-lg-f ': post.selectedbool}" ng-repeat="post in model.content.posts | orderBy : 'lla_post_order' : false" galleryway='waypoint'>
 		<div class='part  part-lg-r part-lg--f' ng-hide="post.selectedbool"  ng-hide='post.selectedbool'> 
 					<a  llaanimate llaanimateon='post.animate' llaanimatein='' llaanimateout=''ng-href='#sense/gallery/{{post.lla_part_slug}}/full'> 
-					<img class='galleryimg verticalbaseline' ng-src="{{post.thumbnail}}" ng-show="{{post.thumbnailset}}" />	
+					<img loadedimages class='galleryimg verticalbaseline' ng-src="{{post.thumbnail}}" ng-show="{{post.thumbnailset}}" />	
 					</a>
 		</div>
 		<div class = 'part part-lg-f part-lg--f paper-effect-border '  llaanimate llaanimateon='post.animate' llaanimatein='stretchRight' llaanimateout='fadeOut' ng-show="post.selectedbool">
