--- a/inc/html/home.html
+++ b/inc/html/home.html
@@ -1,8 +1,10 @@
 <div  class='part part-top-padding part-lg-f part-lg--h part-noptop text-center'>
 
-	<h1 class='website-title animated fadeIn' quotes='click' ng-hide='model.quote'>{{model.blog_title}}</h1>
-	<h1 class='website-title animated fadeIn' quotes='off' ng-show='model.quote'>{{model.quote}}</h1>
+	<h1 class='website-title animated fadeIn' quotes='click'>{{model.blog_title}}</h1>
 </div>
 <div class='part part-top-padding part-lg-h part-lg--h part-mpleft'>
 	<a ng-href="#/sense/gallery/"><h2>Life drawing | Life sensing</h2></a>
+</div>
+<div class='part part-top-padding part-lg-h part-lg--h '>
+	<h3 class='website-title animated fadeIn' quotes='click' ng-show='model.quote'>{{model.quote}}</h3>
 </div>
