Fix of the image centering and the action text

--- a/inc/html/calender.html
+++ b/inc/html/calender.html
@@ -14,7 +14,7 @@
 				<li>{{model.content.main.address_value}}</li>
 			</ul>
 			<p>{{model.content.main.event_desc_value}}</p>
-			<a ng-href="#/calender/{{model.content.main.lla_part_slug}}/full">Read More</a>
+			<a class='actiontext'  ng-href="#/calender/{{model.content.main.lla_part_slug}}/full">Read More</a>
 		</div>
 	</div>
 </div>
