Fix of the quotes styling

--- a/inc/html/home.html
+++ b/inc/html/home.html
@@ -1,10 +1,10 @@
 <div  class='part part-top-padding part-lg-f part-lg--h part-noptop text-center'>
 
-	<h1 class='website-title animated fadeIn' quotes='off'>{{model.blog_title}}</h1>
+	<h1 class='website-title animated fadeIn' quotes='toggle'>{{model.blog_title}}</h1>
 </div>
 <div class='part part-top-padding part-lg-h part-lg--h text-center'>
 	<a ng-href="#/sense/gallery/"><h2>Life drawing | Life sensing</h2></a>
 </div>
-<div class='part part-top-padding part-lg-h part-lg--h '>
+<div class='part part-top-padding part-lg-h part-lg--h  white-space-normal'>
 	<h3 class='animated fadeIn text-center' quotes='click' ng-show='model.quote'>{{model.quote}}</h3>
 </div>
