--- a/inc/html/topnav.html
+++ b/inc/html/topnav.html
@@ -4,7 +4,7 @@
 			<ul>
 				<li ng-repeat="item in model.menuItems">
 					<a ng-href='#/{{item.slug}}'>
-						<div class='navitem'>
+						<div class='navitem' quotes='click'>
 							{{item.title}}
 						</div>
 					</a>
