--- a/inc/html/contact.html
+++ b/inc/html/contact.html
@@ -1,16 +1,24 @@
-<div class='part part-top-padding part-lg-h part-lg--t'>
-	<!-- Viewed event -->
-	<h3>{{model.content.contact[0].post_content}}</h3>
+<div scrollable class='part part-lg-h part-lg--40 '>
+	<div class='outercontent'>
+		<div class='innercontent text-center'> 
+			<span class="helper"></span>
+			<div class='text-center inline-block verticalmiddle'   ng-bind-html='trustAsHtml(model.content.contact[0].post_content)'>
+			</div>
+		</div>
+	</div>
 </div>
-<div class='part part-top-padding part-lg-h part-lg--t'>
-	<ul class='contact-info no-padding'>
-		<li>{{model.content.contact[0].Email}}</li>
-		<li>{{model.content.contact[0].Post}}</li>
-		<li>{{model.content.contact[0].Telephone}}</li>
-	</ul>
+<div class='part part-lg-h part-lg--40'>
+	<span class="helper"></span>
+	<div class="inline-block verticalmiddle">
+		<ul class='no-padding'>
+			<li>{{model.content.contact[0].Email}}</li>
+			<li>{{model.content.contact[0].Post}}</li>
+			<li>{{model.content.contact[0].Telephone}}</li>
+		</ul>
+	</div>
 </div>
 	<!-- contact form -->
-		<div class='part part-top-padding part-lg-f part-lg--2t'ng-show="mailrequest.showdialog">
+		<div class='part part-lg-f part-lg--2t'ng-show="mailrequest.showdialog">
 			<div class="alert alert-info" ng-show='mailrequest.loading'>
 					<button type="button" class="close" ng-click="mailrequest.showdialog=false" aria-hidden="true">&times;</button>
 					<strong>Your Request is being Processed...</strong>
@@ -31,7 +39,7 @@
 			</div>
 		</div>
 	<form name="registerForm" role="form" ng-submit="submitMail()" novalidate>
-		<div class='part part-top-padding part-lg-h part-lg--2t' ng-hide='mailrequest.showdialog'>
+		<div class='part part-lg-h part-lg--2t' ng-hide='mailrequest.showdialog'>
 			<div class="form-group small-input" ng-class="{ 'has-error' : registerForm.email.$invalid && !registerForm.email.$pristine }"ng-hide='mailrequest.showdialog'>
 				<label for="email">Email address*</label>
 				<input type="email" class="form-control" name="email" ng-model="mail.email" required>
@@ -43,7 +51,7 @@
 				<span ng-show="registerForm.message.$invalid && !registerForm.mail.$pristine" class="help-block">You must have a message</span>
 			</div>
 		</div>
-		<div class='part part-top-padding part-lg-h part-lg--2t'ng-hide='mailrequest.showdialog'>
+		<div class='part part-lg-h part-lg--2t'ng-hide='mailrequest.showdialog'>
 			<div class="form-group small-input" ng-class="{ 'has-error' : registerForm.name.$invalid && !registerForm.name.$pristine }"ng-hide='mailrequest.showdialog'>
 				<label for="name">Your Name*</label>
 				<input type="text" class="form-control" name="name" ng-model="mail.name" required>
