Fix of the loading page for gallery

--- a/inc/html/sense.html
+++ b/inc/html/sense.html
@@ -1,3 +1,11 @@
+<div  class='part part-top-padding part-lg-f part-lg--f part-noptop text-center' llaanimate llaanimateon='model.doneloading' llaanimatein='fadeIn' llaanimateout='fadeOut' llaanimateouthide="true" >
+    <div  class='part part-top-padding part-lg-f part-lg--h part-noptop text-center'>
+        <h1 class='website-title animated fadeIn' quotes='toggle'>{{model.blog_title}}</h1>
+    </div>
+    <div  class='part part-top-padding part-lg-f part-lg--h part-noptop text-center'>
+        <img class='animated fadeIn loadinghome' ng-src="{{model.template_dir}}/img/loadinghome.gif"/>
+    </div>
+</div>
 <div class='movearrows'>
 	<div  galleryway='null'>&lt;</div>
 	<div galleryway='next'>&gt;</div>
