Animate of Gallery loading fixed

--- a/inc/html/sense.html
+++ b/inc/html/sense.html
@@ -1,4 +1,4 @@
-<div  class='part part-top-padding part-lg-f part-lg--f part-noptop text-center' llaanimate llaanimateon='model.doneloading' llaanimatein='fadeIn' llaanimateout='fadeOut' llaanimateouthide="true" >
+<div  class='part part-top-padding part-lg-f part-lg--f part-noptop text-center' llaanimate llaanimateon='model.doneloading' llaanimatein='fadeIn' llaanimateout='jsOut' llaanimateouthide="true" >
     <div  class='part part-top-padding part-lg-f part-lg--h part-noptop text-center'>
         <h1 class='website-title animated fadeIn' quotes='toggle'>{{model.blog_title}}</h1>
     </div>
