--- a/inc/html/home.html
+++ b/inc/html/home.html
@@ -6,5 +6,5 @@
 	<a ng-href="#/sense/gallery/"><h2>Life drawing | Life sensing</h2></a>
 </div>
 <div class='part part-top-padding part-lg-h part-lg--h  white-space-normal'>
-	<h3 class='animated fadeIn text-center' quotes='click' ng-show='model.quote' ng-bind-html='trustAsHtml(model.quote)'></h3>
+	<h3 id='quotes'class='animated fadeIn text-center' quotes='click' ng-show='model.quote' ng-bind-html='trustAsHtml(model.quote)'></h3>
 </div>
