--- a/inc/html/contact.html
+++ b/inc/html/contact.html
@@ -1,13 +1,13 @@
-<div scrollable class='part part-lg-h part-lg--40 '>
+<div scrollable class='part part-lg-h part-lg--40 part-sm-f part-sm--q'>
 	<div class='outercontent'>
-		<div class='innercontent text-center'> 
+		<div class='innercontent text-center'>
 			<span class="helper"></span>
 			<div class='text-center inline-block verticalmiddle'   ng-bind-html='trustAsHtml(model.content.contact[0].post_content)'>
 			</div>
 		</div>
 	</div>
 </div>
-<div class='part part-lg-h part-lg--40'>
+<div class='part part-lg-h part-lg--40 part-sm-f part-sm--q part-sm---center'>
 	<span class="helper"></span>
 	<div class="inline-block verticalmiddle">
 		<ul class='no-padding font-mid'>
