--- a/inc/html/home.html
+++ b/inc/html/home.html
@@ -2,9 +2,9 @@
 
 	<h1 class='website-title animated fadeIn' quotes='toggle'>{{model.blog_title}}</h1>
 </div>
-<div class='part part-top-padding part-lg-h part-lg--h text-center'>
+<div class='part part-top-padding part-lg-h part-lg--h text-center part-sm-f part-sm--q'>
 	<a ng-href="#/sense/gallery/"><h2>Life drawing | Life sensing</h2></a>
 </div>
-<div class='part part-top-padding part-lg-h part-lg--h  white-space-normal'>
+<div class='part part-top-padding part-lg-h part-lg--h  white-space-normal part-sm-f part-sm--q'>
 	<h3 id='quotes'class='animated fadeIn text-center' quotes='click' ng-show='model.quote' ng-bind-html='trustAsHtml(model.quote)'></h3>
 </div>
